--- a/docs/thebook/Book.tex
+++ b/docs/thebook/Book.tex
@@ -86,6 +86,7 @@ $#2$ \end{tcolorbox}}
 
 \tableofcontents
 \include{Installation/UserManual}
+\include{Tactics/tactics}
 
 
 \bibliographystyle{plain-annote}
