--- a/docs/exercises/numbertheory.tex
+++ b/docs/exercises/numbertheory.tex
@@ -6,10 +6,14 @@
 \usepackage{graphicx}				% Use pdf, png, jpg, or eps§ with pdflatex; use eps in DVI mode
 \newtheorem{theorem}{Theorem}							% TeX will automatically convert eps --> pdf in pdflatex		
 \usepackage{amssymb}
+\usepackage{pmboxdraw}
 
+\usepackage{fontspec}
+\setmainfont{FreeSerif}
+\setmonofont{FreeMono}
 \title{First number theory set}
-\author{The Author}
-%\date{}							% Activate to display a given date or no date
+\author{}
+\date{}							% Activate to display a given date or no date
 
 \begin{document}
 \maketitle
@@ -21,6 +25,65 @@
 \newtheorem{definition}{Definition}
 
 \newtheorem{puzzle}{Puzzle}
+
+Prove the Lemmas bellow. Name them as before as oneone,  twoone and so on. Please make sure you save the work as you go along and submit as many solutions as you want. I would prefer 10  flawed solutions to one perfect one. I want to see how you think about it, when do you guess, what searches you do, when do you make mistakes, how do you correct them and so on.
+Note that you will need to start with
+\begin{verbatim}
+Definition div a b:= exists c, b = a* c.
+Notation "a | b" := (div a b)(at level 0).
+\end{verbatim}
+
+You will also get to use the tactics:
+\begin{verbatim}
+Rewrite hypothesis VAR using the definition of VAR.
+Rewrite goal using the definition of VAR.
+\end{verbatim}
+
+
+Another useful trick is to make use of the  command SearchPattern. For example, the following
+
+\begin{verbatim}
+SearchPattern (_ * (_ + _) = _).
+\end{verbatim}
+will find all usable theorems that look like that, it will respond with the message
+
+\begin{verbatim}
+Query commands should not be inserted in
+scripts
+
+Nat.mul_add_distr_l: ? n m p : nat, n * (m + p) = n * m + n * p
+\end{verbatim}
+ And therefore you can use the theorem Nat.mul\_add\_distr\_l in your work, either with 
+ \begin{verbatim}
+  Apply result Nat.mul_add_distr_l.
+ \end{verbatim}
+  or with
+  
+  \begin{verbatim}
+Rewrite the goal using  Nat.mul_add_distr_l.
+ \end{verbatim}
+
+Another example would be
+\begin{verbatim}
+SearchPattern (_ * _ = 0 -> _).
+\end{verbatim}
+which gives:
+
+\begin{verbatim}
+Query commands should not be inserted in
+scripts
+
+mult_is_O: ? n m : nat, n * m = 0 ? n = 0 ? m = 0
+
+Nat.eq_mul_0_l: ? n m : nat, n * m = 0 ? m ? 0 ? n = 0
+
+Nat.eq_mul_0_r: ? n m : nat, n * m = 0 ? n ? 0 ? m = 0
+========================
+Nat.mul_eq_0_l: ? n m : nat, n * m = 0 ? m ? 0 ? n = 0
+========================
+Nat.mul_eq_0_r: ? n m : nat, n * m = 0 ? n ? 0 ? m = 0
+\end{verbatim}
+
 
 \begin{lemma} Let $a,b,c \in \mathbb{N}$
 \begin{enumerate}
