--- a/docs/thebook/Book.tex
+++ b/docs/thebook/Book.tex
@@ -62,7 +62,7 @@ $#2$ \end{tcolorbox}}
 \newtheorem{remark}{Remark}
 \newtheorem{example}{Example}
 \newtheorem{warning}{Warning}
-
+\usepackage{subfiles}
 \def\grad{ \mbox{grad}}
 \def\curl{ \mbox{curl}}
 \def\div{ \mbox{div}}
@@ -86,7 +86,7 @@ $#2$ \end{tcolorbox}}
 
 \tableofcontents
 \include{Installation/UserManual}
-\include{Tactics/tactics}
+\subfile{Tactics/tactics}
 
 
 \bibliographystyle{plain-annote}
