--- a/docs/thebook/Tactics/tactics.tex
+++ b/docs/thebook/Tactics/tactics.tex
@@ -368,7 +368,7 @@ Assume the goal is:
  \inp{Prove by contradiction.} will transform the goal to
  
  \coq{\cdots\\ 
- \not P\\
+ \neg P\\
 ===== \\ 
  False}
 
